criando tela de login

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,89 @@
-<p>login works!</p>
+<div class="wrapper">
+  <aside class="marketing">
+    <div class="testimonials">
+      <h2><span>"</span> +5k de clientes satisfeitos</h2>
+
+      <blockquote>
+        "Meu Rh 360 é incrível! Ele é a solução perfeita para gerenciamento de
+        pessoas e processos de contratação. Ele facilita a busca de novos
+        talentos e ajuda a manter a equipe organizada e bem gerenciada. Além
+        disso, o suporte é excepcional e sempre disposto a ajudar."
+      </blockquote>
+
+      <p>
+        <strong>JG</strong> <br />
+        <span>Empresa Lorem Lorem</span>
+      </p>
+    </div>
+  </aside>
+  <main class="login">
+    <form class="login-form">
+      <img class="logo" src="/assets/images/logo.svg" alt="" />
+      <h1>Crie uma conta profissional</h1>
+      <p>Preencha seus dados para ter acesso</p>
+
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Nome completo</label
+        >
+        <input
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Digite seu nome completo"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">E-mail</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Digite seu e-mail cadastrado"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Senha</label>
+        <input
+          type="password"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Digite uma senha forte"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Confirmação de senha</label
+        >
+        <input
+          type="password"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Repita a senha"
+        />
+      </div>
+
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="flexCheckChecked"
+        />
+        <label class="form-check-label" for="flexCheckChecked">
+          Eu aceito os <a href="#">Termos de Uso & Privacidade</a> e o
+          <a href="#">Contrato de Serviço</a>
+        </label>
+      </div>
+
+      <div class="d-grid gap-2">
+        <button class="btn btn-primary btn-lg" type="button">
+          Criar conta
+        </button>
+      </div>
+    </form>
+  </main>
+</div>
