--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap");
+
+:root {
+  --dark-blue: #0b2146;
+  --light: #f8f8fa;
+}
+
 html,
 body {
   width: 100%;
@@ -5,5 +12,8 @@ body {
 }
 
 body {
+  font-family: "Montserrat", sans-serif !important;
+  font-size: 1rem;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
