--- a/src/app/core/pages/dashboard/dashboard.component.html
+++ b/src/app/core/pages/dashboard/dashboard.component.html
@@ -1,46 +1,5 @@
 <div class="wrapper">
-  <aside class="sidebar">
-    <img src="../../../../assets/images/logo-white.svg" alt="" />
-
-    <ul class="sidebar-nav">
-      <h2 class="title">Empresa</h2>
-      <li class="item">
-        <a href="http://">Confi. da empresa</a>
-      </li>
-      <li class="item">
-        <a href="http://">Minha empresa</a>
-      </li>
-      <li class="item">
-        <a href="http://">Benefícios</a>
-      </li>
-      <li class="item">
-        <a href="http://">Áreas</a>
-      </li>
-      <li class="item">
-        <a href="http://">Cargos</a>
-      </li>
-      <li class="item">
-        <a href="http://">Filiais</a>
-      </li>
-    </ul>
-
-    <ul class="sidebar-nav">
-      <h2 class="title">Vagas</h2>
-      <li class="item">
-        <a href="http://">Gestão de vagas</a>
-      </li>
-    </ul>
-
-    <ul class="sidebar-nav">
-      <h2 class="title">Usuários</h2>
-      <li class="item">
-        <a href="http://">Meu perfil</a>
-      </li>
-      <li class="item">
-        <a href="http://">Todos os usuários</a>
-      </li>
-    </ul>
-  </aside>
+  <app-sidebar></app-sidebar>
   <main class="content-wrapper">
     <nav class="navbar" style="background-color: #fff">
       <div class="container-fluid">
