criando componente de navbar

--- a/src/app/core/pages/dashboard/dashboard.component.html
+++ b/src/app/core/pages/dashboard/dashboard.component.html
@@ -1,17 +1,7 @@
 <div class="wrapper">
   <app-sidebar></app-sidebar>
   <main class="content-wrapper">
-    <nav class="navbar" style="background-color: #fff">
-      <div class="container-fluid">
-        <a class="navbar-brand"></a>
-        <div class="d-flex">
-          <div class="avatar">
-            <img src="../../../../assets/images/avatar.svg" alt="" />
-            <span class="username">Henry</span>
-          </div>
-        </div>
-      </div>
-    </nav>
+    <app-navbar></app-navbar>
 
     <div class="content">
       <router-outlet></router-outlet>
