ajustando rotas e criando tela de welcome

--- a/src/app/core/pages/dashboard/dashboard.component.html
+++ b/src/app/core/pages/dashboard/dashboard.component.html
@@ -4,7 +4,10 @@
     <app-navbar></app-navbar>
 
     <div class="content">
-      <router-outlet></router-outlet>
+      <app-breadcrumb></app-breadcrumb>
+      <div class="container-fluid" style="background-color: #fff">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </main>
 </div>
