criando componente de form

--- a/src/app/core/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/components/breadcrumb/breadcrumb.component.html
@@ -1,8 +1,19 @@
-<div class="d-flex justify-content-end">
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="#">Configurações</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Empresa</li>
-    </ol>
-  </nav>
+<div class="container-fluid">
+  <div class="row align-items-center">
+    <div class="col-6 col-sm-6 p-0">
+      <div class="d-flex justify-content-start">
+        <h1 class="fs-6 fw-bold text-uppercase">Dashboard</h1>
+      </div>
+    </div>
+    <div class="col-6 col-sm-6 p-0">
+      <div class="d-flex justify-content-end">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Configurações</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Empresa</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+  </div>
 </div>
