--- a/src/app/core/pages/welcome/welcome.component.html
+++ b/src/app/core/pages/welcome/welcome.component.html
@@ -6,9 +6,9 @@
         É necessário configurar a empresa matriz para visualizar todas as
         informações do sistema.
       </p>
-      <button type="button" class="btn btn-primary text-uppercase">
+      <a routerLink="/editar-empresa" class="btn btn-primary text-uppercase">
         Iniciar Configuração
-      </button>
+      </a>
     </div>
     <div class="col-8 col-sm-8">
       <img src="../../../../assets/icons/config.svg" alt="" />
