--- a/src/app/core/pages/dashboard/dashboard.component.html
+++ b/src/app/core/pages/dashboard/dashboard.component.html
@@ -5,7 +5,10 @@
 
     <div class="content">
       <app-breadcrumb></app-breadcrumb>
-      <div class="container-fluid" style="background-color: #fff">
+      <div
+        class="container-fluid"
+        style="background-color: #fff; border-radius: 8px"
+      >
         <router-outlet></router-outlet>
       </div>
     </div>
