criando componente de minha empresa e ajustes

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -4,10 +4,16 @@
   <ul class="sidebar-nav">
     <h2 class="title">Empresa</h2>
     <li class="item">
-      <a href="http://">Confi. da empresa</a>
+      <a routerLink="/editar-empresa" routerLinkActive="active">
+        <i
+          class="bi bi-building-fill-gear"
+          style="margin-right: 8px; font-size: 1rem"
+        ></i>
+        Confi. da empresa
+      </a>
     </li>
     <li class="item">
-      <a href="http://">Minha empresa</a>
+      <a routerLink="/minha-empresa" routerLinkActive="active">Minha empresa</a>
     </li>
     <li class="item">
       <a href="http://">Benefícios</a>
@@ -21,22 +27,46 @@
     <li class="item">
       <a href="http://">Filiais</a>
     </li>
+    <li class="item">
+      <a href="http://">
+        <i class="bi bi-columns" style="margin-right: 8px; font-size: 1rem"></i>
+        Confi. de sistema
+      </a>
+    </li>
   </ul>
 
   <ul class="sidebar-nav">
     <h2 class="title">Vagas</h2>
     <li class="item">
-      <a href="http://">Gestão de vagas</a>
+      <a href="http://"
+        ><i
+          class="bi bi-person-fill-add"
+          style="margin-right: 8px; font-size: 1rem"
+        ></i
+        >Gestão de vagas</a
+      >
     </li>
   </ul>
 
   <ul class="sidebar-nav">
     <h2 class="title">Usuários</h2>
     <li class="item">
-      <a href="http://">Meu perfil</a>
+      <a href="http://"
+        ><i
+          class="bi bi-person-badge"
+          style="margin-right: 8px; font-size: 1rem"
+        ></i
+        >Meu perfil</a
+      >
     </li>
     <li class="item">
-      <a href="http://">Todos os usuários</a>
+      <a href="http://"
+        ><i
+          class="bi bi-people-fill"
+          style="margin-right: 8px; font-size: 1rem"
+        ></i
+        >Todos os usuários</a
+      >
     </li>
   </ul>
 </aside>
