--- a/src/app/core/components/sidebar/sidebar.component.scss
+++ b/src/app/core/components/sidebar/sidebar.component.scss
@@ -35,6 +35,11 @@
           background-color: var(--light);
           color: var(--dark-blue);
         }
+
+        &.active {
+          background-color: var(--light);
+          color: var(--dark-blue);
+        }
       }
     }
   }
