--- a/src/app/core/pages/create-company/create-company.component.html
+++ b/src/app/core/pages/create-company/create-company.component.html
@@ -147,7 +147,9 @@
       <button class="btn btn-outline-secondary me-md-2" type="button">
         Cancelar
       </button>
-      <button class="btn btn-primary" type="button">Salvar Dados</button>
+      <button class="btn btn-primary" type="button" routerLink="/minha-empresa">
+        Salvar Dados
+      </button>
     </div>
   </form>
 </div>
