inserindo link de logout

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <div class="d-flex">
       <div class="avatar">
         <img src="../../../../assets/images/avatar.svg" alt="" />
-        <span class="username">Henry</span>
+        <a routerLink="/login" class="username">Henry</a>
       </div>
     </div>
   </div>
